@@ -34,7 +34,7 @@
     "domready": "0.3.0",
     "eslint": "0.15.0",
     "express": "4.12.1",
-    "faux-jax": "1.7.1",
+    "faux-jax": "2.0.0",
     "grunt": "0.4.5",
     "grunt-contrib-clean": "0.6.0",
     "grunt-contrib-concat": "0.5.1",
@@ -70,7 +70,7 @@
   "scripts": {
     "test": "grunt build && zuul --phantom --ui tape test/run.js | tap-growl | tap-spec && npm run lint",
     "test-ci": "grunt build && DEBUG=zuul* zuul --tunnel ngrok test/run.js && npm run lint",
-    "dev": "grunt build && zuul --local 8080 --ui tape test/run.js",
+    "dev": "grunt build && DEBUG=zuul* zuul --local 8080 --ui tape test/run.js",
     "examples": "http-server . -a 127.0.0.1",
     "lint": "eslint --quiet test/"
   },
